# jheadc89

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  makefile
include/: iptc.h  jhead.h
src/: exif.c  gpsinfo.c  imgfile.c  iptc.c  jhead.c  jpgfile.c  jpgqguess.c  makernote.c  myglob.c  paths.c  pngfile.c  webpfile.c  winfileopen.c
